--- a/Week1/Day 3/Practice/Flexible column/style.css
+++ b/Week1/Day 3/Practice/Flexible column/style.css
@@ -6,6 +6,7 @@
     flex: 1;
     padding: 20px;
     margin: 10px;
+    justify-content: space-evenly;
 }
 .col-2{
     background-color: rgba(70, 66, 66, 0.863);
